# vestaboard-local

./: .editorconfig  .env.example  .gitignore  CODEOWNERS  Cargo.toml  LICENSE  README.md  debug_test.rs  rustfmt.toml  test_error_format  test_error_format.rs
deploy/: rocinante.sh
docs/: 20250719-widget-execution-refactoring.md  20250719-widget-separation-implementation.md  20250720-dry-run-standardization-issue.md  20250721-process-controller-usage.md  20250721-schedule-monitor-refactoring.md  20251109-cli-output-improvement-plan.md  20251225-playlist-architecture.md  20251228-weather-api-upgrade.md  20260101-server-dashboard-plan.md  DEVELOPMENT_GUIDE.md  playlist.md  process-controller-usage.md  schedule.md
docs/playlist/: 00-overview.md  01-phase-1-foundation.md  02-phase-2-cli.md  03-phase-3-execution.md  04-phase-4-schedule.md  05-phase-5-cleanup.md
src/: api.rs  api_broker.rs  api_client.rs  cli_display.rs  cli_setup.rs  config.rs  cycle.rs  daemon.rs  datetime.rs  errors.rs  jokes.rs  lib.rs  logging.rs  main.rs  message.rs  playlist.rs  process_control.rs  runtime_state.rs  scheduler.rs  vblconfig.rs  weather.rs
src/api/: common.rs  internet.rs  local.rs  mod.rs
src/runner/: common.rs  keyboard.rs  lock.rs  mod.rs  playlist_runner.rs  schedule_runner.rs
src/tests/: api_broker_tests.rs  api_tests.rs  cli_display_tests.rs  cli_output_integration_tests.rs  cli_setup_tests.rs  config_tests.rs  cycle_tests.rs  daemon_tests.rs  error_tests.rs  keyboard_tests.rs  lock_tests.rs  logging_tests.rs  mod.rs  playlist_runner_tests.rs  playlist_tests.rs  process_control_tests.rs  runner_tests.rs  runtime_state_tests.rs  schedule_runner_tests.rs  scheduler_tests.rs
src/widgets/: mod.rs  resolver.rs  widget_utils.rs
src/widgets/jokes/: jokes.rs  jokes.txt  jokes_tests.rs  mod.rs
src/widgets/sat_words/: .gitignore  mod.rs  sat_words.rs  sat_words_tests.rs  words.txt
src/widgets/tests/: mod.rs  resolver_tests.rs  (+1 more)
tests/: api_broker.rs  message_tests.rs  widget_utils.rs
tests/widgets/: mod.rs  widget_utils_tests.rs
(+5 files in other folders)
