[package]
name = "vestaboard-local"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.132"
futures-io = "0.3.29"
dotenv = "0.15.0"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
clap = { version = "4.5.21", features = ["derive"] }
once_cell = "1.20.2"
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
nanoid = "0.4.0"
ctrlc = "3.4.6"

[[bin]]
name = "vbl"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.19.1"
