[package]
name = "vestaboard-local"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.132"
futures-io = "0.3.29"
dotenv = "0.15.0"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
clap = { version = "4.5.21", features = ["derive"] }
once_cell = "1.20.2"
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
nanoid = "0.4.0"
ctrlc = "3.4.6"
log = "0.4.22"
env_logger = "0.11.5"
toml = "0.8.19"
crossterm = "0.28"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "vbl"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.19.1"
regex = "1.10.2"
wiremock = "0.6"
